feat: readme, docker files, update naming
