# docs/swagger.json
@@ -267,7 +267,7 @@
                     {
                         "type": "string",
                         "description": "Filter by subscription name",
-                        "name": "name",
+                        "name": "service_name",
                         "in": "query"
                     }
                 ],
@@ -304,11 +304,11 @@
                 "end_date": {
                     "type": "string"
                 },
-                "name": {
-                    "type": "string"
-                },
                 "price": {
                     "type": "integer"
+                },
+                "service_name": {
+                    "type": "string"
                 },
                 "start_date": {
                     "type": "string"
@@ -327,11 +327,11 @@
                 "id": {
                     "type": "string"
                 },
-                "name": {
-                    "type": "string"
-                },
                 "price": {
                     "type": "integer"
+                },
+                "service_name": {
+                    "type": "string"
                 },
                 "start_date": {
                     "type": "string"
