# internal/model/subscription.go
@@ -5,18 +5,18 @@ import (
 )
 
 type Subscription struct {
-	ID        uuid.UUID `json:"id"`
-	Name      string    `json:"name"`
-	Price     int       `json:"price"`
-	UserID    uuid.UUID `json:"user_id"`
-	StartDate string    `json:"start_date"`
-	EndDate   *string   `json:"end_date,omitempty"`
+	ID          uuid.UUID `json:"id"`
+	ServiceName string    `json:"service_name"`
+	Price       int       `json:"price"`
+	UserID      uuid.UUID `json:"user_id"`
+	StartDate   string    `json:"start_date"`
+	EndDate     *string   `json:"end_date,omitempty"`
 }
 
 type SubRequest struct {
-	Name      string    `json:"name"`
-	Price     int       `json:"price"`
-	UserID    uuid.UUID `json:"user_id"`
-	StartDate string    `json:"start_date"`
-	EndDate   *string   `json:"end_date,omitempty"`
+	ServiceName string    `json:"service_name"`
+	Price       int       `json:"price"`
+	UserID      uuid.UUID `json:"user_id"`
+	StartDate   string    `json:"start_date"`
+	EndDate     *string   `json:"end_date,omitempty"`
 }
